# os-scheduling

./: .gitignore  CMakeLists.txt  README.md  README.txt  functions.h  helperFunctions.cpp  helperFunctions.h  main.cpp  metrics.cpp  metrics.h  process.cpp  process.h  schedulingFunctions.cpp  schedulingFunctions.h  textTable.h
include/: helperFunctions.h  metrics.h  process.h  schedulingFunctions.h  textTable.h
src/: helperFunctions.cpp  metrics.cpp  process.cpp  schedulingFunctions.cpp
